syntax ="proto3";
import "protosupport/v1/protosupport.proto";
import "httpconnector/v1/httpconnector.proto";
package frontdoor.v1;
option go_package="frontdoor/v1;frontdoor";

// Frontdoor only needs a single method, the one that receives the 
// initial request.
service Frontdoor {
  // This option binds the type "FrontdoorErr" to this Frontdoor service and
  // code generated will use FrontdoorErr as the type for error retuns.
  option (protosupport.v1.error_id_name) = "FrontdoorErr";
}

// The first four values of any error enum are to be as shown below.
enum FrontdoorErr{
  option (protosupport.v1.parigot_error) = true;
  NoError = 0; // required
  DispatchError = 1; // required
  UnmarshalFailed = 2; // required
  MarshalFailed = 3; // required
}
